--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,5 +1,5 @@
 .home {
-  background-image: url("../assets/adele-bw.jpg");
+  background-image: url("");
   height: 100vh;
   width: 100vw;
   background-repeat: no-repeat;
