--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,12 +1,12 @@
 .home {
-  background-image: url("");
+  width: 100%;
   height: 100vh;
-  width: 100vw;
-  background-repeat: no-repeat;
+  background-image: url("../assets/adele-sideways-bw.webp");
+  background-size: 100% 100%;
 }
 
 .home-title {
   font-family: "WindSong", cursive;
   font-size: 5em;
-  text-align: center;
+  text-align: left;
 }
